--- a/whw2025.md
+++ b/whw2025.md
@@ -637,4 +637,133 @@ Adam Eve
 
 ### 
 
+### 2024.10.02
+
+第十四节抽象合约和接口
+1、抽象合约（abstract）
+
+如果一个智能合约里至少有一个未实现的函数，即某个函数缺少主体{}中的内容，则必须将该合约标为abstract，不然编译会报错；另外，未实现的函数需要加virtual，以便子合约重写。
+
+2、接口（interface）
+
+a、接口类似于抽象合约，但它不实现任何功能。接口的规则：
+
+1）不能包含状态变量；示例：
+interface MyInterface {
+    // 错误：接口中不能有状态变量
+    // uint public value;
+    
+    // 正确：只定义函数，没有状态变量
+    function getValue() external view returns (uint);
+}
+
+2）不能包含构造函数；示例：
+
+interface MyInterface {
+    // 错误：接口中不能有构造函数
+    // constructor() {}
+
+    function getValue() external view returns (uint);
+}
+
+3）不能继承除接口外的其他合约，接口只能继承其他接口，不能继承合约。
+
+4）所有函数都必须是external且不能有函数体；接口中声明的函数必须是 external，表示只能通过外部调用，且不能提供具体的实现（函数体）。这是因为接口只定义行为，不提供实现。
+示例：
+interface MyInterface {
+    // 必须是 external 且不能有函数体
+    function getValue() external view returns (uint);
+}
+
+问题1：什么是函数体，即具体的实现？
+
+GPT答：
+实现（函数体） 就是为一个函数编写具体的逻辑代码，使得该函数可以执行某个操作或返回值。
+在接口中，我们只能定义函数的签名（函数的名称、参数类型、返回值类型等），而不能包含具体的实现，即不能写出函数内部的逻辑代码。
+
+5）继承接口的非抽象合约必须实现接口定义的所有功能
+
+b、接口是智能合约的骨架，定义了合约的功能以及如何触发它们：如果智能合约实现了某种接口（比如ERC20或ERC721），其他Dapps和智能合约就知道如何与它交互。
+
+c、接口提供了两个重要的信息：
+1）合约里每个函数的bytes4选择器，以及函数签名函数名(每个参数类型）
+
+每个函数都有一个独特的 函数选择器，它是函数签名的哈希值的前四个字节。函数签名包括函数名称和参数类型的组合。
+
+例子：函数 transfer(address, uint256) 的选择器是通过 keccak256("transfer(address,uint256)") 计算出的哈希值的前四个字节，即 bytes4。
+
+2）接口id（更多信息见EIP165）
+EIP165 定义了一种标准，用于合约通过接口 ID 来声明自己支持的接口。接口 ID 是通过将接口中所有函数的选择器进行按位或（OR）运算计算出来的。
+
+3）接口与合约ABI（Application Binary Interface）等价，可以相互转换：编译接口可以得到合约的ABI，利用abi-to-sol工具，也可以将ABI json文件转换为接口sol文件。
+
+ABI 是合约与外部应用程序（如前端应用或其他智能合约）交互的标准。
+如果我们知道一个合约实现了IERC721接口，我们不需要知道它具体代码实现，就可以与它交互。
+
+第十五节异常
+
+三种抛出异常的方法：error，require和assert
+
+一、error
+1、节省 Gas：与直接在 revert 中使用字符串相比，error 通过更优化的数据存储方式，能大幅减少 Gas 消耗，特别是在复杂的错误处理场景中。
+
+2、更易调试：自定义 error 的参数可以提供更多的错误信息，帮助开发者更快地定位问题。
+3、在实际执行时，如果需要中断操作并抛出异常，error 必须和 revert 命令配合使用。通过 revert 命令，合约可以返回 error 并中止执行。
+
+二、require
+1、require 是 Solidity 中用于条件检查的常用命令，当检查的条件不满足时，它会抛出异常并停止合约的执行。
+
+2、语法格式为
+require(条件, "异常信息");
+
+条件：是一个布尔表达式，如果条件为 false，则会触发异常。
+异常信息：当条件为 false 时，会抛出这个异常消息，方便用户和开发者了解错误原因
+
+3、require 在 Solidity 0.8.0 之前是异常处理的主要方式之一，至今仍然被广泛使用。它的缺点是随着异常信息长度增加，Gas 费用也会增加。
+
+4、error和require比较
+1）Gas 消耗：使用 require 抛出带有字符串信息的错误会消耗较多的 Gas，因为字符串存储和处理需要更多资源。而使用 error（Solidity 0.8.4 引入的特性）相比，节省了 Gas 消耗，尤其是在字符串很长的情况下。
+
+2）调试信息：require 中的字符串信息为开发者和用户提供了即时的反馈，但这些信息在链上存储时会占用较多空间。而使用 error 可以通过参数传递更多结构化的信息，节省存储空间并提高效率。
+
+三、assert
+1、assert 主要用于检查代码中的不可变条件，通常用来捕捉不应该发生的错误；
+
+2、语法格式为：assert(条件);
+
+条件：是一个布尔表达式。如果条件为 false，合约将抛出异常，并回滚交易。
+
+3、与 require 不同，assert 在抛出异常时不会返回错误信息，因此它通常用于内部错误检查，例如不变式或逻辑保证。
+
+4、assert 和 require 的区别
+
+1）用法场景：
+require 通常用于用户输入的验证和条件检查（例如权限验证、函数参数验证等），可以附带错误信息。
+assert 则主要用于代码中的逻辑保证，表示某些条件不应该失败。如果失败，意味着合约有逻辑错误。
+
+2）Gas 消耗：
+在合约执行失败时，require 会退还剩余的 Gas，但 assert 会消耗掉所有剩余的 Gas。因此，assert 的使用场景更加严格和谨慎。
+
+3）错误信息：
+require 可以提供详细的错误信息，帮助调试或向用户提供反馈。
+assert 则不会提供任何错误信息，只是单纯地检查条件并在失败时回滚合约。
+
+5.何时使用 assert：assert 一般用于在函数逻辑中检查那些不应该失败的条件。
+例如：
+• 数学运算中的溢出检查（尽管在 Solidity 0.8 之后，自动处理了溢出检查）。
+• 关键状态变量的校验，确保状态在执行过程中保持一致。
+• 不变性检查，例如数组长度或映射键值对的存在性。
+
+总结：
+
+1、assert 这种使用方式适合合约内部的不可变条件，而不适合用户输入或外部条件的验证。如果条件不满足，合约将抛出异常并终止执行，但不会提供任何附加的错误信息。
+
+2、因此，assert 通常用于保证合约的核心逻辑的正确性，而不是处理用户错误。如果你需要返回更详细的错误信息或处理用户输入错误，require 会是更好的选择。
+
+3、error方法gas最少，其次是assert，require方法消耗gas最多！
+
+4、Solidity 0.8.0之前的版本，assert抛出的是一个 panic exception，会把剩余的 gas 全部消耗，不会返还。
+
+### 
+
 <!-- Content_END -->
